# nodo

./: Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: archive.rs  completions.rs  edit.rs  mod.rs  move.rs  remove.rs  show.rs  sync.rs
cli/src/utils/: git.rs  mod.rs  target.rs  user.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/markdown/: mod.rs
core/src/query/: tasks.rs
nodo-core/: Cargo.toml
nodo-core/src/: lib.rs
nodo-core/src/markdown/: mod.rs
