[package]
name = "nodo-core"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
repository = "https://github.com/jeffa5/nodo"
readme = "README.md"
description = "Core functionality for Nodo frontends"
keywords = ["notes", "todos", "tasks","management"]
categories = []

[dependencies]
pulldown-cmark = "0.7.2"
log = "0.4.11"
thiserror = "1.0.20"

[dev-dependencies]
pretty_assertions = "0.6.1"
